# tar1_fase2

./: .gitignore  CMakeLists.txt  README.md  TrabalhoSE_BJL_01_Atenilton_Santos_de_Souza_Junior.docx  diagram.json  tar1_fase2.c  wokwi.toml
Exemplo_trecho_cmake/: exemplo_cmake.md
func/: funcionalidades.c  funcionalidades.h  opcoes_escolhidas.c  opcoes_escolhidas.h
lib/: buttons.c  buttons.h  buzzer.c  buzzer.h  display_init.c  display_init.h  font.h  matrixws.c  matrixws.h  ssd1306.c
